<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_200"
            android:padding="10dp"

            android:text="@string/option"
            android:textColor="@color/white"
            android:textSize="17dp"
            android:textStyle="bold"></TextView>

        <Button
            android:id="@+id/view_bottom_sheet"
            style="@style/btn_basic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:text="@string/view"></Button>

        <Button
            android:id="@+id/edit_bottom_sheet"
            style="@style/btn_basic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:text="@string/edit"></Button>

        <Button
            android:id="@+id/delete_bottom_sheet"
            style="@style/btn_basic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="20dp"
            android:drawableLeft="@drawable/ic_delete"
            android:text="@string/delete"></Button>

    </LinearLayout>


</androidx.cardview.widget.CardView>