<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <include android:id="@+id/include_toolbar_forgot_password" layout="@layout/toolbar_forgot_password"></include>

    <LinearLayout
        android:layout_centerVertical="true"
        android:layout_marginVertical="50dp"
        android:layout_below="@id/include_toolbar_forgot_password"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:text="@string/forgot_password"
            android:layout_height="wrap_content">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="17dp"
            android:gravity="center_horizontal"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/des_forgot_password"
            android:layout_height="wrap_content">

        </TextView>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_email_forgot_password"
                android:layout_width="match_parent"
                android:hint="@string/email"
                android:layout_height="wrap_content">
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:text="@string/btn_send"
            android:padding="15dp"
            android:id="@+id/btn_send_forgot_password"
            android:layout_height="wrap_content">

        </Button>

    </LinearLayout>
</RelativeLayout>