<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_login"
        android:layout_width="200dp"
        app:lottie_rawRes="@raw/mobile"
        app:lottie_autoPlay="true"
       android:layout_marginTop="70dp"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        app:lottie_loop="true"
        android:padding="20dp"
        android:layout_height="200dp">
    </com.airbnb.lottie.LottieAnimationView>

    <LinearLayout
        android:layout_below="@id/animation_login"
        android:layout_width="match_parent"
        android:padding="30dp"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_username_login"
                android:layout_width="match_parent"
                android:hint="@string/username"
                android:layout_height="wrap_content">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_password_login"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:drawableRight="@drawable/visibility"
                android:layout_height="wrap_content">
            </com.google.android.material.textfield.TextInputEditText>


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_marginTop="25dp"
            android:padding="15dp"
            android:text="@string/login"
            android:layout_height="wrap_content">
        </Button>

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="match_parent"
            android:textColor="@color/color_see_more"
            android:text="@string/forgot_password"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content">

        </TextView>
    </LinearLayout>



</RelativeLayout>