<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormWorkCounselorsMainActivity">

    <include
        android:id="@+id/include_toolbar_form_work_counselors"
        layout="@layout/toolbar_form_work_counselors"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/include_toolbar_form_work_counselors">

        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:cardCornerRadius="100dp">

                <ImageView
                    android:id="@+id/imageView_form_counselor"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/news1"></ImageView>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageCamera_form_counselor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_camera"></ImageButton>

                <ImageButton
                    android:id="@+id/imageGallery_form_counselor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_image"></ImageButton>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_firstName_form_counselor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name"></com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_lastName_form_counselor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"></com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="7dp"
                android:orientation="vertical"
                android:background="@drawable/custom_btn_radio"
                android:layout_height="wrap_content">
                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_birthDate_form_counselor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:layout_margin="3dp"

                    app:cardPreventCornerOverlap="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tv_title_birthDate_form_counselor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/birth_date"
                            android:textColor="@color/black">

                        </TextView>

                        <TextView
                            android:id="@+id/tv_birthDate_form_counselor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_toEndOf="@id/tv_title_birthDate_form_counselor"
                            android:layout_toRightOf="@id/tv_title_birthDate_form_counselor"
                            android:padding="10dp"
                            android:text="26/03/2000">

                        </TextView>
                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <DatePicker
                    android:id="@+id/date_picker_form_counselor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner"
                    android:visibility="gone">

                </DatePicker>
            </LinearLayout>


            <com.hbb20.CountryCodePicker
                android:id="@+id/countryCodeHolder_form_counselor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ccp_showFullName="true"
                app:ccp_showPhoneCode="false"
                app:ccp_textGravity="LEFT">

            </com.hbb20.CountryCodePicker>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_email_form_counselor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"></com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_phone_form_counselor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"></com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_password_form_counselor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"></com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/sex"
                android:textStyle="bold"></TextView>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_btn_radio"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rd_man_form_counselor"
                    android:layout_width="wrap_content"
                    android:checked="true"
                    android:layout_height="wrap_content"
                    android:text="@string/man"></RadioButton>

                <RadioButton
                    android:id="@+id/rd_women_form_counselor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="19dp"
                    android:layout_marginRight="19dp"
                    android:text="@string/women"></RadioButton>

                <RadioButton
                    android:id="@+id/rd_other_form_counselor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other"></RadioButton>
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_position_form_counselor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/position"></com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="Category"
                android:textStyle="bold"></TextView>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_btn_radio"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rd_health_form_counselor"
                    android:layout_width="wrap_content"
                    android:checked="true"
                    android:layout_height="wrap_content"
                    android:text="Health"></RadioButton>

                <RadioButton
                    android:id="@+id/rd_fitness_form_counselor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="19dp"
                    android:layout_marginRight="19dp"
                    android:text="Fitness"></RadioButton>

                <RadioButton
                    android:id="@+id/rd_nutrition_form_counselor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nutrition"></RadioButton>
            </RadioGroup>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_introduce_form_counselor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:hint="@string/introduce"
                    android:lines="3"></com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_submit_form_counselor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/btn_submit"></Button>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>