<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateNewsActivity">

    <include android:id="@+id/include_toolbar_create_news" layout="@layout/toolbar_create_news"></include>
    <ScrollView
        android:layout_below="@id/include_toolbar_create_news"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:padding="10dp"
            android:layout_below="@id/include_toolbar_create_news"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="300dp">
                <ImageButton
                    android:id="@+id/img_choose_create_news"
                    android:layout_width="wrap_content"
                    android:src="@drawable/ic_image"
                    android:layout_height="wrap_content">
                </ImageButton>

                <ImageView
                    android:id="@+id/image_view_news_create"
                    android:padding="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></ImageView>


            </LinearLayout>



            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_title_news"
                    android:layout_width="match_parent"
                    android:hint="@string/hint_news_headlines"
                    android:layout_height="wrap_content">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_des_news"
                    android:layout_width="match_parent"
                    android:lines="5"
                    android:gravity="top"
                    android:hint="@string/hint_description"
                    android:layout_height="wrap_content">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_url_news"
                    android:layout_width="match_parent"
                    android:hint="@string/hint_url"
                    android:layout_height="wrap_content">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_submit_create_news"
                android:hint="@string/btn_submit"
                style="@style/btn_basic">
            </Button>
        </LinearLayout>
    </ScrollView>



</RelativeLayout>